@@ -19,7 +19,7 @@
 
 package org.apache.gravitino.utils;
 
-import java.util.Map;
+import java.util.Collections;
 import org.apache.gravitino.exceptions.GravitinoRuntimeException;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -33,7 +33,7 @@ public class TestJdbcUrlUtils {
             GravitinoRuntimeException.class,
             () ->
                 JdbcUrlUtils.validateJdbcConfig(
-                    "testDriver", "malformed%ZZurl", Map.of("test", "test")));
+                    "testDriver", "malformed%ZZurl", Collections.singletonMap("test", "test")));
     Assertions.assertEquals("Unable to decode JDBC URL", gre.getMessage());
   }
 
@@ -43,7 +43,9 @@ public class TestJdbcUrlUtils {
         IllegalArgumentException.class,
         () ->
             JdbcUrlUtils.validateJdbcConfig(
-                null, "jdbc:mysql://localhost:0000/test", Map.of("test", "test")));
+                null,
+                "jdbc:mysql://localhost:0000/test",
+                Collections.singletonMap("test", "test")));
   }
 
   @Test
@@ -51,7 +53,9 @@ public class TestJdbcUrlUtils {
     Assertions.assertDoesNotThrow(
         () ->
             JdbcUrlUtils.validateJdbcConfig(
-                "testDriver", "jdbc:mysql://localhost:0000/test", Map.of("test", "test")));
+                "testDriver",
+                "jdbc:mysql://localhost:0000/test",
+                Collections.singletonMap("test", "test")));
   }
 
   @Test
@@ -64,7 +68,7 @@ public class TestJdbcUrlUtils {
                 JdbcUrlUtils.validateJdbcConfig(
                     "testDriver",
                     "jdbc:mysql://localhost:0000/test?allowloadlocalinfile=test",
-                    Map.of("test", "test")));
+                    Collections.singletonMap("test", "test")));
     Assertions.assertEquals(
         "Unsafe MySQL parameter 'allowloadlocalinfile' detected in JDBC URL", gre.getMessage());
   }
@@ -78,7 +82,7 @@ public class TestJdbcUrlUtils {
                 JdbcUrlUtils.validateJdbcConfig(
                     "testDriver",
                     "jdbc:mysql://localhost:0000/test",
-                    Map.of("maxAllowedPacket", "maxAllowedPacket")));
+                    Collections.singletonMap("maxAllowedPacket", "maxAllowedPacket")));
     Assertions.assertEquals(
         "Unsafe MySQL parameter 'maxAllowedPacket' detected in JDBC URL", gre.getMessage());
   }
@@ -88,7 +92,9 @@ public class TestJdbcUrlUtils {
     Assertions.assertDoesNotThrow(
         () ->
             JdbcUrlUtils.validateJdbcConfig(
-                "testDriver", "jdbc:mariadb://localhost:0000/test", Map.of("test", "test")));
+                "testDriver",
+                "jdbc:mariadb://localhost:0000/test",
+                Collections.singletonMap("test", "test")));
   }
 
   @Test
@@ -100,7 +106,7 @@ public class TestJdbcUrlUtils {
                 JdbcUrlUtils.validateJdbcConfig(
                     "testDriver",
                     "jdbc:mariaDB://localhost:0000/test?allowloadlocalinfile=test",
-                    Map.of("test", "test")));
+                    Collections.singletonMap("test", "test")));
     Assertions.assertEquals(
         "Unsafe MariaDB parameter 'allowloadlocalinfile' detected in JDBC URL", gre.getMessage());
   }
@@ -110,7 +116,9 @@ public class TestJdbcUrlUtils {
     Assertions.assertDoesNotThrow(
         () ->
             JdbcUrlUtils.validateJdbcConfig(
-                "testDriver", "jdbc:postgresql://localhost:0000/test", Map.of("test", "test")));
+                "testDriver",
+                "jdbc:postgresql://localhost:0000/test",
+                Collections.singletonMap("test", "test")));
   }
 
   @Test
@@ -122,7 +130,7 @@ public class TestJdbcUrlUtils {
                 JdbcUrlUtils.validateJdbcConfig(
                     "testDriver",
                     "jdbc:postgresql://localhost:0000/test?socketFactory=test",
-                    Map.of("test", "test")));
+                    Collections.singletonMap("test", "test")));
     Assertions.assertEquals(
         "Unsafe PostgreSQL parameter 'socketFactory' detected in JDBC URL", gre.getMessage());
   }
@@ -133,11 +141,15 @@ public class TestJdbcUrlUtils {
         IllegalArgumentException.class,
         () ->
             JdbcUrlUtils.validateJdbcConfig(
-                null, "jdbc:postgresql://localhost:0000/test", Map.of("test", "test")));
+                null,
+                "jdbc:postgresql://localhost:0000/test",
+                Collections.singletonMap("test", "test")));
 
     Assertions.assertThrowsExactly(
         IllegalArgumentException.class,
-        () -> JdbcUrlUtils.validateJdbcConfig("testDriver", null, Map.of("test", "test")));
+        () ->
+            JdbcUrlUtils.validateJdbcConfig(
+                "testDriver", null, Collections.singletonMap("test", "test")));
 
     Assertions.assertThrowsExactly(
         IllegalArgumentException.class, () -> JdbcUrlUtils.validateJdbcConfig(null, null, null));
